# CasinoHackUltimate2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  heroku.yml  run.sh
include/coin/: miner.hpp
include/coin/math/: eval.hpp  fraction.hpp
include/http/: connection.hpp  http.hpp  session.hpp  utils.hpp
include/vk/: client.hpp
src/: client.cpp  connection.cpp  eval.cpp  main.cpp  miner.cpp  session.cpp  utils.cpp
